--- a/config/config.json
+++ b/config/config.json
@@ -9,15 +9,15 @@
   "test": {
     "username": "root",
     "password": null,
-    "database": "database_test",
+    "database": "rdl_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "admin",
+    "password": "Roannamo123_",
+    "database": "rdl",
+    "host": "rdl.clcl2rhzoeva.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
