--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
-NODE_ENV = production
+NODE_ENV = development
+SECRET_TOKEN = ";&_q,#mfHpQ$2,7:n/ZM+6/SKU([k0
+p@uEbkqbRr/Z+r*G7Aagg6@v;_,Eh{
+6p7#RUwNLb2$U*XXT2z8F]9daec(_%
+Hq[r%Bk4TFJ#:h3tZu;ZpRp:Fw79HS
+m3MjZnNy*#4n,NGp;DGHe(W@e+qmr5
+m-Mx2wYeS]w]kZk9Y3(/eYG$@EmD#:
+ZgaUzX1xgpPn6}+,gWTN}81M.w-q%J
+9Xtm,1Z@KGwU6BP]GB)8!]$qJ7NGMF
+4d}2P-L{pE;X315(*,#ymXC-YM}.Ym
+Wd[dMGrB?ge2bBK*%tVLi@W=EeC/H$"
